language/move-lang/tests/move_check/liveness/dead_refs_nested_invalid.exp
error: 

   ┌── tests/move_check/liveness/dead_refs_nested_invalid.move:9:17 ───
   │
 9 │             _ = x;
   │                 ^ Invalid copy of local 'x'
   ·
 4 │         let x_ref = &mut x;
   │                     ------ It is still being mutably borrowed by this reference
   │

error: 

    ┌── tests/move_check/liveness/dead_refs_nested_invalid.move:19:20 ───
    │
 19 │                _ = x;
    │                    ^ Invalid copy of local 'x'
    ·
 15 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/liveness/dead_refs_nested_invalid.move:29:71 ───
    │
 29 │             if (cond) { _ = x_ref; break } else { while (!cond) { _ = x } }
    │                                                                       ^ Invalid copy of local 'x'
    ·
 27 │         let x_ref = &mut x;
    │                     ------ It is still being mutably borrowed by this reference
    │

